[package]
name = "app"
version = "0.1.0"
homepage = "https://github.com/rtang03/simply-hard"
repository = "https://github.com/rtang03/simply-hard"
keywords = ["config"]
authors = ["Ross Tang <https://github.com/rtang03/rtang03>"]
categories = ["config"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache License"
description = """
An incomplete implementation of a Rust app. Used as a
larger example of an idiomatic application.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target

[[bin]]
name = "simply-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "simply-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
config = "0.13.3"
futures = "0.3.28"
lazy_static = "1.4.0"
notify = "6.0.0"
prost = "0.11.9"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
glob = "0.3"
log = { version = "0.4", features = ["serde"] }
tokio = { version = "1.28.2", features = ["test-util"] }

[build-dependencies]
tonic-build = "0.9.2"
