[package]
name = "app"
version = "0.1.0"
homepage = "https://github.com/rtang03/simply-hard"
repository = "https://github.com/rtang03/simply-hard"
keywords = ["config"]
authors = ["Ross Tang <https://github.com/rtang03/rtang03>"]
categories = ["config"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache License"
description = """
An incomplete implementation of a Rust app. Used as a
larger example of an idiomatic application.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target

[[bin]]
name = "simply-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "simply-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
colored = { version = "2.0.0", optional = false }
config = "0.13.3"
futures = "0.3.28"
h2 = "0.3.19"
lazy_static = { version = "1.4.0", optional = false }
notify = { version = "6.0.0", optional = true }
prost = "0.11.9"
serde = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "tracing",
  "signal",
] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tonic = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
tokio-console = "0.1.8"
glob = "0.3"
tokio = { version = "1.28.2", features = ["test-util"] }
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = ["cli", "server"]
cli = []
server = ["notify"]
