[package]
name = "app"
version = "0.1.0"
homepage = "https://github.com/rtang03/simply-hard"
repository = "https://github.com/rtang03/simply-hard"
keywords = ["config"]
authors = ["Ross Tang <https://github.com/rtang03/rtang03>"]
categories = ["config"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache License"
description = """
An incomplete implementation of a Rust app. Used as a
larger example of an idiomatic application.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target

[[bin]]
name = "simply-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "simply-server"
path = "src/bin/server.rs"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.0", features = ["derive"] }
colored = { version = "2.0.0", optional = false }
config = "0.13.3"
derive_builder = "0.12.0"
futures = "0.3.28"
h2 = "0.3.19"
lazy_static = { version = "1.4.0", optional = false }
notify = { version = "6.0.0", optional = true }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.19.0", optional = true, features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18.0", optional = true, features = ["rt-tokio"] }
prost = "0.11.9"
serde = "1.0.163"
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9", features = [
  "protocol-ws",
  "rustls",
  "kv-mem",
] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
tonic = "0.9.2"
tracing = { version = "0.1.37" }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.19.0", optional = true }
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "json",
  "time",
] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
glob = "0.3"
matches = "0.1.10"
test-case = "3.1.0"
tokio = { version = "1.28.2", features = ["test-util"] }
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = ["cli", "server", "otel"]
cli = []
server = ["notify"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

[[test]]
name = "server_streams"
path = "tests/server_stream.rs"
