[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.4.0", features = [
  "std",
  "crh",
  "r1cs",
  "merkle_tree",
  "signature",
] }
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ed-on-bls12-381 = { version = "0.4.0", features = ["r1cs", "std"] }
ark-ff = "0.4.2"
ark-r1cs-std = "0.4.0"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", features = ["std", "getrandom"] }
blake2 = "0.10.6"
rand = { version = "0.8.5", features = ["std_rng"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = []
